# Face_Recog

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
colab/: FaceForge_Quickstart.ipynb  models_download.sh
docker/: Dockerfile.gpu  docker-compose.yml
docs/: architecture.md  usage.md
examples/: README.md
scripts/: demo_webcam.py  evaluate_dataset.py  process_video.py
src/faceforge/: __init__.py  __version__.py  api.py  cli.py
src/faceforge/detectors/: __init__.py  mtcnn.py  opencv_dnn.py  retinaface.py
src/faceforge/recognizers/: facenet.py  insightface.py  sv_classifier.py
src/faceforge/utils/: __init__.py  gpu.py  metrics.py  transforms.py  video.py
tests/: test_detectors.py  test_metrics.py  test_recognizers.py
